fix: sidebar scrollbar fix

--- a/src/style/app-fixed.module.css
+++ b/src/style/app-fixed.module.css
@@ -6057,6 +6057,7 @@ form {
   background-color: var(--leftDrawer-fixedModule-bg) !important;
   transition: 0.5s;
   font-family: var(--bs-leftDrawer-font-family);
+  overflow-x: hidden !important;
 }
 
 .activeDrawer {
@@ -6078,6 +6079,7 @@ form {
 
 .leftDrawer .sidebarcompheight {
   flex-grow: 1;
+  overflow-x: hidden !important;
 }
 
 .leftDrawer .brandingContainer {
@@ -6122,6 +6124,7 @@ form {
 .leftDrawer .optionList {
   /* height: 75%; */
   overflow-y: hidden;
+  overflow-x: hidden !important;
   scrollbar-width: thin;
   scrollbar-color: var(--leftDrawer-scrollbar-color) transparent;
   transition: overflow 0.3s ease-in-out;
@@ -6152,6 +6155,7 @@ form {
   display: flex;
   align-items: center;
   width: 100%;
+  max-width: 100%;
   text-align: start;
   margin-bottom: 0.8rem;
   border-radius: 12px;
@@ -6160,6 +6164,7 @@ form {
   padding-left: 0.8rem;
   outline: none;
   border: none;
+  overflow: hidden;
 }
 
 .leftDrawer button .iconWrapper {
@@ -9585,6 +9590,7 @@ form {
 
 .collapsedDrawer {
   width: var(--sidebar-collapsed-width);
+  overflow-x: hidden !important;
 }
 
 .sidebarText {
@@ -9596,6 +9602,7 @@ form {
 
 .expandedDrawer {
   width: var(--sidebar-expanded-width);
+  overflow-x: hidden !important;
 }
 
 .venueimage {
